OU Bug 2946 - add an option to text equations to prevent word wrapping in the middle.

--- a/src/om/stdcomponent/RootComponent.css
+++ b/src/om/stdcomponent/RootComponent.css
@@ -22,6 +22,10 @@
 {
   clear:both;
 }
+.om .nowrap
+{
+  white-space: nowrap;
+}
 .om .endform
 {
   clear:both;
